<resources>
    <string name="app_name">Top Movie</string>
    <string name="myname">Muhammad Afrizal Suhartono</string>
    <string name="myemail">mafrizalsuhartono@gmial.com</string>
    <string name="movie_title">Title Movie\n</string>
    <string name="movie_year">Year\n</string>
    <string name="movie_times">2H 3M\n</string>
    <string name="movie_description">Description\n</string>
    <string name="movie_rating">9.0 (2.3M)</string>
    <string name="star">⭐</string>
</resources>