<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/rv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/movie_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_movie"
            android:layout_marginStart="12dp"
            android:layout_alignTop="@id/img_movie"
            android:layout_toEndOf="@+id/img_movie"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:text="@string/movie_title"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp">

                <TextView
                    android:id="@+id/movie_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_year" />

                <TextView
                    android:id="@+id/movie_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_times" />

                <TextView
                    android:id="@+id/star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/star" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_rating" />

            </LinearLayout>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_description" />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>