<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:buttonGravity="top|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/movie_set_title"
            android:text="@string/movie_title"/>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">


            <ImageView
                android:id="@+id/movie_set_image"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:contentDescription="TODO"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/movie_year" />

                <TextView
                    android:id="@+id/movie_set_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.6"
                    android:text="@string/movie_year" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="Times" />

                <TextView
                    android:id="@+id/movie_set_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.9"
                    android:text="@string/movie_times" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="Rating" />

                <TextView
                    android:id="@+id/movie_set_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.7"
                    android:text="@string/movie_year" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="Director " />

                <TextView
                    android:id="@+id/movie_set_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:textStyle="bold"
                    android:text="Writter " />

                <TextView
                    android:id="@+id/movie_set_writter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="TextView" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:textSize="20sp"
                android:text="Description" />

            <TextView
                android:id="@+id/movie_set_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="12dp"
                android:layout_marginVertical="4dp"
                android:text="@string/movie_description" />


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="20sp"
                    android:text="Storyline" />

                <TextView
                    android:id="@+id/movie_set_storyline"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginVertical="4dp"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="Top Cast" />

                <TextView
                    android:id="@+id/movie_set_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"
                    android:text="TextView" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>